<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bt_refresh_ble"
        android:title="@string/refresh"
        android:visible="false"
        app:showAsAction="always" />
      <item
        android:id="@+id/ble_scan"
        android:title="@string/scan"
        app:showAsAction="always" />
    <item
        android:id="@+id/ble_scan_stop"
        android:title="@string/stop"
        app:showAsAction="ifRoom"
        android:visible="false" />
    <item
        android:id="@+id/bt_settings"
        android:title="@string/bluetooth_settings" />
    <item
        android:id="@+id/loc_settings"
        android:title="@string/location_settings" />
    <item
        android:id="@+id/filterNames"
        android:title="@string/filterNamesLabel"
        app:showAsAction="never"
        android:checkable="true"/>


</menu>
