<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark1"
    android:scrollbarSize="12dp"
    android:scrollbarStyle="insideInset"
    tools:context=".ActivityMain">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:fitsSystemWindows="true"
            app:title="@string/devices"
            app:titleTextAppearance="@font/comfortaa_font_resource" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainMenuContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_repeat"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/title_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="fitStart"
            app:layout_constraintEnd_toStartOf="@+id/buttons_mm"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/app_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:text="@string/ver_info"
            android:textColor="@color/color_arduino"
            android:textSize="12sp"
            android:textStyle="bold"
            app:fontFamily="@font/comfortaa_font_resource"
            app:layout_constraintEnd_toEndOf="@+id/title_image"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="@+id/title_image"
            app:layout_constraintTop_toBottomOf="@+id/title_image" />

        <LinearLayout
            android:id="@+id/buttons_mm"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.36">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonBLE"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_rectangle_button"
                android:fontFamily="@font/comfortaa_font_resource"
                android:text="@string/bluetooth_le_label"
                android:textAllCaps="false"
                android:textColor="?colorOnBackground"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonClassic"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_rectangle_button"
                android:fontFamily="@font/comfortaa_font_resource"
                android:text="@string/bluetooth_classic_label"
                android:textAllCaps="false"
                android:textColor="?colorOnBackground"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/lang_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_rectangle_button"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_language"
                app:tint="?colorOnBackground" />

            <ImageButton
                android:id="@+id/help_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_rectangle_button"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_help"
                app:tint="?colorOnBackground" />

            <Space
                android:layout_width="48dp"
                android:layout_height="48dp" />

            <ImageButton
                android:id="@+id/quitButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_rectangle_button"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_exit"
                app:tint="?colorOnBackground" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/emailButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_rectangle_button"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_email"
                app:tint="?colorOnBackground" />

            <ImageButton
                android:id="@+id/shareButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_rectangle_button"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_share_black"
                app:tint="?colorOnBackground" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/helpPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundDark1"
        android:scrollbarSize="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/helpPanelLabel"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@color/backgroundDark2"
            android:fontFamily="@font/comfortaa_font_resource"
            android:gravity="center"
            android:text="@string/helpButtonLabel"
            android:textAlignment="gravity"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/helpCloseButton"
            android:layout_width="150dp"
            android:layout_height="38dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_rectangle_button"
            android:fontFamily="@font/comfortaa_font_resource"
            android:text="@string/close"
            android:textAllCaps="false"
            android:textColor="?colorOnBackground"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:fadeScrollbars="false"
            android:scrollbarSize="6dp"
            android:scrollbarStyle="insideInset"
            android:scrollbarThumbVertical="?colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/helpCloseButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helpPanelLabel">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="32dp">

                <TextView
                    android:id="@+id/helpText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autoLink="all"
                    android:fontFamily="@font/comfortaa_font_resource"
                    android:includeFontPadding="true"
                    android:lineSpacingMultiplier="1.15"
                    android:linksClickable="true"
                    android:text="@string/helpText"
                    android:textColorLink="?colorPrimary"
                    android:textIsSelectable="true"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
